--- a/theme.css
+++ b/theme.css
@@ -24,6 +24,13 @@ html {
 	}
 }
 
+iconify-icon {
+	display: inline-block;
+	width: 1.25em;
+	height: 1.25em;
+	margin-bottom: -2px;
+}
+
 .inherit-parent {
 	font-family: inherit;
 	font-size: inherit;
